--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
     "name": "supabase-repo-wrapper",
-    "module": "src/index.ts",
+    "version": "1.0.0",
+    "description": "A generic BaseRepository class for Supabase that provides common data access methods",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
     "type": "module",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
+    "files": ["dist"],
     "scripts": {
+        "build": "bun build src/index.ts --outdir dist --target node --format esm && bun run build:types",
+        "build:types": "tsc --emitDeclarationOnly --outDir dist",
+        "test": "bun test",
+        "test:watch": "bun test --watch",
         "prepare": "if [ \"$CI\" = \"true\" ]; then echo 'CI detected: skipping lefthook install'; else bunx lefthook install; fi",
         "lint": "bun biome check .",
         "lint:fix": "bun biome check --write"
@@ -16,5 +31,9 @@
     },
     "peerDependencies": {
         "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.49.8",
+        "drizzle-orm": "^0.44.0"
     }
 }
