--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,13 @@
         "strict": true,
         "skipLibCheck": true,
         "noFallthroughCasesInSwitch": true,
+        "declaration": true,
 
         // Some stricter flags (disabled by default)
         "noUnusedLocals": false,
         "noUnusedParameters": false,
         "noPropertyAccessFromIndexSignature": false
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["example/**/*", "node_modules", "dist"]
 }
