--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": ["node_modules/", ".idea/", ".claude/", "dist/"]
+        "ignore": ["node_modules/", ".idea/", ".claude/", "dist/", "coverage/"]
     },
     "formatter": {
         "enabled": true,
