--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build:types": "tsc --emitDeclarationOnly --outDir dist",
         "test": "bun test",
         "test:watch": "bun test --watch",
+        "coverage": "bun test --coverage --coverage-reporter=lcov --coverage-reporter=text",
         "prepare": "if [ \"$CI\" = \"true\" ]; then echo 'CI detected: skipping lefthook install'; else bunx lefthook install; fi",
         "lint": "bun biome check .",
         "lint:fix": "bun biome check --write"
