--- a/.codacy.yml
+++ b/.codacy.yml
@@ -3,6 +3,7 @@ engines:
     enabled: true
   markdownlint:
     enabled: true
+    configuration: .markdownlint.json
   shellcheck:
     enabled: true
 
