--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🏗️ Setup Bun
-        uses: oven-sh/setup-bun@4bc047a # v2.0.1
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2.0.2
         with:
           bun-version: 1.1.21
 
@@ -31,6 +31,9 @@ jobs:
 
       - name: Lint project files
         run: bun run lint
+
+      - name: Format project files
+        run: bun run format
 
       - name: Build package
         run: bun run build
